# office_hub

./: .gitignore  CHANGELOG.md  HANDOFF_SESSION.md  README.md  Start-OfficeHub.ps1  config.example.yaml  dump_emails.ps1  eslint.config.js  fix.py  index.html  install_addin_ribbon.ps1  package-lock.json  package.json  poem.txt  poem_test.ps1  readme_user.md  script.py  script2.py  script3.py  script4.py  script5.py  script6.py  script7.py  script8.py  session3_build.bat  start.ps1  sync_token.ps1  test.ps1  test2.ps1  test3.ps1  test4.ps1  test_addin_connectivity.ps1  test_ps1.cjs  test_ps2.cjs  test_ws.py  test_ws_log.txt  test_ws_suite.py  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
.zed/: settings.json
docs/: HANDOFF.md  HANDOFF_SESSION_10.md  HANDOFF_SESSION_11.md  HANDOFF_SESSION_12.md  HANDOFF_SESSION_13.md  HANDOFF_SESSION_14.md  HANDOFF_SESSION_15.md  HANDOFF_SESSION_16.md  HANDOFF_SESSION_17.md  HANDOFF_SESSION_18.md  HANDOFF_SESSION_19.md  HANDOFF_SESSION_2.md  HANDOFF_SESSION_20.md  HANDOFF_SESSION_21.md  HANDOFF_SESSION_22.md  HANDOFF_SESSION_23.md  HANDOFF_SESSION_24.md  HANDOFF_SESSION_25.md  HANDOFF_SESSION_26.md  HANDOFF_SESSION_28.md  HANDOFF_SESSION_29.md  HANDOFF_SESSION_3.md  HANDOFF_SESSION_30.md  HANDOFF_SESSION_4.md  HANDOFF_SESSION_5.md  HANDOFF_SESSION_6.md  HANDOFF_SESSION_7.md  HANDOFF_SESSION_8.md  HANDOFF_SESSION_9.md  MASTER_PLAN.md  MASTER_PLAN_AMENDMENT_v1.1.md  Office Hub - Comprehensive Specs v4.2 (Final).md  Office Hub - Comprehensive Specs v4.5 (Web Researcher Integration).md  PHASE3B_GAP_ANALYSIS.md  PHASE3B_PLAN.md  RELEASE_PLAN_v1.0.md  RELEASE_TEST_RESULTS.md  SESSION_HANDOFF_PROTOCOL.md  USER_GUIDE.md  handoff-2026-04-27-sse-migration.md  (+8 more)
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/: types.ts
mobile/src/components/: HitlApprovalSheet.tsx
mobile/src/hooks/: useVoiceRecording.ts
mobile/src/screens/: ArtifactsScreen.tsx  ChatScreen.tsx  ConnectionScreen.tsx  HomeScreen.tsx  MainTabs.tsx  ProgressScreen.tsx  SettingsScreen.tsx
mobile/src/store/: sseStore.ts
office-addin/: Setup-OfficeAddin.ps1  index.html  outlook-manifest.xml  package-lock.json  package.json  test_ws.js  vite.config.ts
office-addin-catalog/: manifest.xml
office-addin/src/: App.tsx  index.css  main.tsx
rules/: default.yaml
scripts/: setup_ollama.ps1  test_mobile_ws.mjs
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  cargo_check.txt  check_out.txt  compile_errors.txt  compile_errors2.txt  create-icon.ps1  errors.json  errors.txt  errors2.txt  fix_brackets.py  fix_newline.py  mock_mcp_server.py  replace_agents.py  replace_orch.py  scratch_build_providers.txt  scratch_primary_model.txt  scratch_routing_queue.txt  scratch_update_config.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: addin_server.rs  commands.rs  crdt.rs  http_server.rs  knowledge.rs  lib.rs  main.rs  mcp_transport.rs  sse_server.rs  test_variant.rs
src-tauri/src/agents/: com_utils.rs  mod.rs  system.rs  win32_admin.rs
src-tauri/src/agents/analyst/: excel_com.rs  mod.rs
src-tauri/src/agents/converter/: mod.rs
src-tauri/src/agents/folder_scanner/: mod.rs
src-tauri/src/agents/office_master/: com_excel.rs  com_ppt.rs  com_word.rs  mod.rs
src-tauri/src/agents/outlook/: mod.rs
src-tauri/src/agents/web_researcher/: browser_engine.rs  mod.rs  uia.rs
src-tauri/src/llm_gateway/: mod.rs
src-tauri/src/mcp/: agent_mcp_adapter.rs  broker.rs  internal_servers.rs  mod.rs  native_chart.rs
src-tauri/src/orchestrator/: intent.rs  memory.rs  mod.rs  plan.rs  plan_monitor.rs  plan_runner.rs  planned_method.rs  router.rs  rule_engine.rs  session.rs
src-tauri/src/system/: mod.rs  setup.rs
src-tauri/src/websocket/: mod.rs
src-tauri/src/workflow/: mod.rs
src-tauri/src/workflow/actions/: mod.rs
src-tauri/src/workflow/triggers/: email.rs  file_watcher.rs  mod.rs  schedule.rs
src-tauri/tests/: test_orchestrator.rs
src/components/: ChartRenderer.tsx  OfficeHubLogo.tsx  WorkspaceSwitcher.tsx
src/components/AgentManager/: AgentManager.tsx  index.ts
src/components/AgentMonitor/: AgentMonitor.css  AgentMonitor.tsx  CustomNodes.tsx
src/components/ChatPane/: ChatPane.tsx  HistorySidebar.tsx  index.ts
src/components/FileBrowser/: FilePreview.tsx  index.tsx
src/components/KnowledgeBase/: FileList.tsx  MarkdownEditor.tsx  index.tsx
src/components/Settings/: AIDashboard.tsx  LlmTab.tsx  MobileTab.tsx  SkillManager.tsx  SystemTab.tsx  index.tsx
src/components/WorkflowBuilder/: Sidebar.tsx  WorkflowGeneratorChat.tsx  index.tsx
src/store/: workspaceStore.ts
test/: App.test.tsx  e2e_addin_ws.py  generate_mock_data.py  run_all_tests.py
test_mock_data/: BaoCao_Q4.xlsx  DuAn_TongHop.docx  Presentation_Template.pptx  test_mock_data_20260424_155312_TongHop.pptx  test_mock_data_20260424_155552_TongHop.pptx  test_mock_data_20260424_155729_TongHop.pptx
workflows/: data-to-chart-pptx.yaml  email-to-report.yaml
