[package]
name = "office-hub"
version = "1.0.0"
edition = "2021"
description = "Office Hub – AI-powered Office Automation System"
authors = []
license = "MIT"
default-run = "office-hub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "office_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ─────────────────────────────────────────────
# Build dependencies
# ─────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ─────────────────────────────────────────────
# Core – Tauri framework
# ─────────────────────────────────────────────
[dependencies]
tauri              = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs    = "2"
tauri-plugin-notification = "2"
tauri-plugin-http  = "2"

# ─────────────────────────────────────────────
# Serialisation / Deserialisation
# ─────────────────────────────────────────────
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# ─────────────────────────────────────────────
# Async runtime
# ─────────────────────────────────────────────
tokio = { version = "1", features = [
    "full",         # rt-multi-thread, macros, sync, time, fs, net, signal
] }
async-trait = "0.1"
futures     = "0.3"

# ─────────────────────────────────────────────
# HTTP client – LLM API calls (Gemini / OpenAI / Ollama)
# ─────────────────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "blocking",
] }

# ─────────────────────────────────────────────────────────────────────────────
# GenAI – Native Tool Calling (Phase 1 Migration)
# ─────────────────────────────────────────────────────────────────────────────
genai = "0.5"

# ─────────────────────────────────────────────
# WebSocket – Mobile / In-app chat communication
# ─────────────────────────────────────────────
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }

# ─────────────────────────────────────────────
# Error handling
# ─────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ─────────────────────────────────────────────
# Logging & tracing
# ─────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# ─────────────────────────────────────────────
# Utilities
# ─────────────────────────────────────────────
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }
regex   = "1"
base64  = "0.22"
sha2    = "0.10"
dirs    = "5"          # platform-aware config / data dirs
rhai    = { version = "1.19.0", features = ["sync"] } # In-memory scripting engine

# ─────────────────────────────────────────────
# Concurrency & Database
# ─────────────────────────────────────────────
image      = "0.24"
dashmap    = "6"       # concurrent HashMap – session store / agent registry
once_cell  = "1"       # lazy statics
rusqlite   = { version = "0.31", features = ["bundled", "vtab"] } # SQLite FTS5 cho Long-term Memory

# ─────────────────────────────────────────────
# MCP (Model Context Protocol)
# ─────────────────────────────────────────────
# mcp-sdk = "0.1"     # TODO: pin when an official Rust SDK stabilises
# For now, implement the JSON-RPC 2.0 transport layer ourselves:
jsonrpc-core = "18"

oauth2 = "5.0.0"
urlencoding = "2.1.3"
winreg = "0.52"
local-ip-address = "0.6"
calamine = { version = "0.26", features = ["dates"] }  # Excel reader (no COM needed)

# ─────────────────────────────────────────────
# Workflow Triggers (Phase 6)
# ─────────────────────────────────────────────
notify = "6.1"
tokio-cron-scheduler = "0.13" # Updated to 0.13 as it's the newer stable version
tokio-util = { version = "0.7", features = ["rt", "io", "codec"] }
axum = { version = "0.8.9", features = ["multipart", "http1", "tokio"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "set-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
async-stream = "0.3"   # generator-style SSE stream macro
automerge = "0.9.0"
polars = { version = "0.45", features = ["lazy", "sql", "json", "csv", "strings", "dtype-datetime"] }
polars-sql = "0.45"
pdf-extract = "0.10.0"
headless_chrome = { version = "1.0", features = ["fetch"] }
plotters = "0.3.7"


# ─────────────────────────────────────────────
# Windows-only: COM Automation + UI Automation
# ─────────────────────────────────────────────
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    # COM infrastructure
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    # System services
    "Win32_System_Power",
    "Win32_System_Registry",
    # UI Automation (Web Researcher / browser control)
    "Win32_UI_Accessibility",
    # Foundation types (HWND, HRESULT, BSTR …)
    "Win32_Foundation",
    # Window management
    "Win32_UI_WindowsAndMessaging",
    # Graphics (screenshot grounding)
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    # File system watcher (workflow triggers)
    "Win32_Storage_FileSystem",
    # Process and Thread management
    "Win32_System_Threading",
] }

# ─────────────────────────────────────────────
# Profiles
# ─────────────────────────────────────────────
[profile.dev]
incremental = true

[profile.release]
panic           = "abort"     # smaller binary
codegen-units   = 1           # better optimisation
lto             = true
strip           = true        # strip debug symbols → smaller .exe
opt-level       = 3

[profile.release-with-debug]
inherits        = "release"
strip           = false
debug           = true
